fixed logo and hamburger menu alignment

--- a/css/home.css
+++ b/css/home.css
@@ -105,6 +105,11 @@ nav {
 @media (max-width: 768px) {
     .hamburger {
         display: block;
+        margin: 50px;
+    }
+
+    .logo_img_and_name {
+        margin-left: 50px;
     }
 
     .hamburger.active .bar:nth-child(2) {
@@ -150,6 +155,8 @@ nav {
     .nav_name {
         display: none;
     }
+
+
 }
 
 .hero_container {
